fix for sufficient contrast radio

--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -1,6 +1,6 @@
 $col-black: #1a1b1f;
 $col-lightgrey: #e7e7e7;
-$col-midgrey: #9b9ca0;
+$col-midgrey: #7F6BA0;
 $col-greyish: #3e3f42;
 $col-tintblue: #f8ffff;
 $col-turquoise: #effffd;
@@ -44,7 +44,7 @@ $palettes: (
   home: (
     "tint": #F5FFFD,
     "mid": #D6FFF8,
-    "dark": #00B3B2,
+    "dark": #00809e,
     "full": #178270
   )
 );
